--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
   "name": "luspricebot",
   "version": "1.0.0",
-  "description": "",
+  "description": "A Telegram bot to fetch cryptocurrency prices and perform calculations.",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon bot.js"
+  "engines": {
+    "node": "14.x"
   },
-  "keywords": [],
-  "author": "",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "keywords": [
+    "telegram",
+    "bot",
+    "crypto",
+    "calculator"
+  ],
+  "author": "Your Name",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.5",
     "dotenv": "^16.4.5",
     "mathjs": "^13.0.3",
-    "node-telegram-bot-api": "^0.66.0",
+    "node-telegram-bot-api": "^0.66.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.4"
   }
 }
